<resources>
    <string name="app_name">compx202-assignment8-31711034-31711036</string>
    <string name="gamename">COLLIDER</string>
    <string name="developer">Developer: Lu Danqi, Shi Peijia</string>
    <string name="login">Log in</string>
    <string name="logout">Log out</string>
    <string name="buttonStart">Start</string>
    <string name="buttonScore">Score</string>
    <string name="user">User:</string>
    <string name="hi">Welcome,    </string>

    <string name="score">SCORE</string>
    <string name="yourscore">Your New Score:</string>
    <string name="top">TOP 5</string>
</resources>
