<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LogActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="vertical" >
        <TextView
            android:id="@+id/mainTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:layout_margin="20dp"
            android:text="@string/gamename"
            android:textSize="25dp"
            android:textFontWeight="100"
            android:textColor="@color/title"/>
        <TextView
            android:id="@+id/mainTitleProducer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:layout_margin="20dp"
            android:text="@string/developer"
            android:textSize="15dp"
            android:textColor="@color/title"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <TextView
                android:id="@+id/mainTitleUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:layout_margin="20dp"
                android:text="@string/user"
                android:textSize="20dp"
                android:textColor="@color/title"/>

            <EditText
                android:id="@+id/UsernameInput"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@color/buttonbg"
                android:hint="Input your Username"
                android:textColorHint="@color/buttontext"/>

        </LinearLayout>

        <Button
            android:id="@+id/onClickButtonScore"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:layout_margin="20dp"
            android:background="@drawable/scorebutton_style"
            android:textColor="@color/buttontext"
            android:text="@string/login"
            android:textSize="25dp"
            android:onClick="onClickButtonLogin"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>