<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:background="@color/background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="vertical" >
        <TextView
            android:id="@+id/mainTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:layout_margin="20dp"
            android:text="@string/gamename"
            android:textSize="25dp"
            android:textFontWeight="100"
            android:textColor="@color/title"/>

        <TextView
            android:id="@+id/mainTitleProducer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:layout_margin="20dp"
            android:text="@string/developer"
            android:textSize="15dp"
            android:textColor="@color/title"/>

        <Button
            android:id="@+id/onClickButtonStart"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:layout_margin="20dp"
            android:background="@drawable/button_style"
            android:textColor="@color/buttontext"
            android:text="@string/buttonStart"
            android:textSize="25dp"
            android:onClick="onClickButtonStart"/>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>